TriviaGame I got it

--- a/index.html
+++ b/index.html
@@ -25,22 +25,22 @@
         </div>
 
         <p id="tquestion"> Which fictional city is the home of Batman?</p>
-        <input type="radio" id="mc" name="question1" value="Gotham City" checked> Gothom City<br>
-        <input type="radio" id="mc" name="question2" value="The Bat Cave"> The Bat Cave<br>
-        <input type="radio" id="mc" name="question3" value="Smallville"> Smallville<br>
-        <input type="radio" id="mc" name="question4" value="New York"> New York<br>
+        <input type="radio" id="question1" name="Answer1" value="Gotham City" checked> Gotham City<br>
+        <input type="radio" id="question2" name="Answer1" value="The Bat Cave"> The Bat Cave<br>
+        <input type="radio" id="question3" name="Answer1" value="Smallville"> Smallville<br>
+        <input type="radio" id="question4" name="Answer1" value="New York"> New York<br>
 
         <p id="tquestion"> Which crime-fighting cartoon dog has the initals "S.D." on his collar?</p>
-        <input type="radio" id="mc" name="question1" value="Super Dog" checked> Super Dog<br>
-        <input type="radio" id="mc" name="question2" value="Scrappy Doo"> Scrappy Doo<br>
-        <input type="radio" id="mc" name="question3" value="Seven Dwarfs"> Seven Dwarfs<br>
-        <input type="radio" id="mc" name="question4" value="Scooby Doo"> Scooby Doo<br>
+        <input type="radio" id="question1" name="Answer2" value="Super Dog" checked> Super Dog<br>
+        <input type="radio" id="question2" name="Answer2" value="Scrappy Doo"> Scrappy Doo<br>
+        <input type="radio" id="question3" name="Answer2" value="Seven Dwarfs"> Seven Dwarfs<br>
+        <input type="radio" id="question4" name="Answer2" value="Scooby Doo"> Scooby Doo<br>
 
         <p id="tquestion"> Traditionally, how many Wonders of the World are there?</p>
-        <input type="radio" id="mc" name="question1" value="Six" checked> Six<br>
-        <input type="radio" id="mc" name="question2" value="Seventeen"> Seventeen<br>
-        <input type="radio" id="mc" name="question3" value="Seven"> Seven<br>
-        <input type="radio" id="mc" name="question4" value="Sixty"> Sixty<br>
+        <input type="radio" id="question1" name="Answer3" value="Six" checked> Six<br>
+        <input type="radio" id="question2" name="Answer3" value="Seventeen"> Seventeen<br>
+        <input type="radio" id="question3" name="Answer3" value="Seven"> Seven<br>
+        <input type="radio" id="question4" name="Answer3" value="Sixty"> Sixty<br>
 
         </form>
         <div id="after_submit">
